--- a/features/user_feature/src/main/res/layout/fragment_user_list.xml
+++ b/features/user_feature/src/main/res/layout/fragment_user_list.xml
@@ -33,8 +33,55 @@
                 app:layout_constraintTop_toBottomOf="@id/title"
                 tools:listitem="@layout/list_item_user" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@id/title">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                    <include layout="@layout/list_item_user_shimmer" />
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
 </layout>
