--- a/features/user_feature/src/main/res/layout/list_item_user.xml
+++ b/features/user_feature/src/main/res/layout/list_item_user.xml
@@ -8,6 +8,10 @@
         <variable
             name="user"
             type="com.joaovicttors.user_feature.domain.entities.User" />
+
+        <variable
+            name="callback"
+            type="com.squareup.picasso.Callback" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,6 +28,9 @@
             android:layout_marginLeft="24dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
+            app:imageUrl="@{user.image}"
+            app:error="@{@drawable/ic_round_account_circle}"
+            app:callback="@{callback}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -66,7 +73,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/picture"
             app:layout_constraintEnd_toEndOf="@+id/picture"
             app:layout_constraintStart_toStartOf="@+id/picture"
